add: article get queries
